--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "bower": "^1.5.3",
     "brunch": "^1.8.5",
     "clean-css-brunch": "^1.7.2",
-    "coffee-script": "^1.10.0",
     "css-brunch": "^1.7.0",
     "javascript-brunch": "^1.7.1",
-    "uglify-js-brunch": "^1.7.8",
-    "uncss-brunch": "^1.0.1"
+    "sass-brunch": "^1.9.1",
+    "uglify-js-brunch": "^1.7.8"
   }
 }
